--- a/docker-dev.env
+++ b/docker-dev.env
@@ -3,16 +3,16 @@ ADMIN_EMAIL_DATA_EXPORT={}
 ADMIN_EMAIL_DATA_EXPORT_TEST={}
 ADMIN_EMAIL_EMAIL_TEST={}
 ADMIN_UIDS={}
+DATABASE_URL=postgres://postgres:oiPorg3Nrz0yqDLE@postgres:5432/polis-dev?sslmode=disable
 DATABASE_FOR_READS_NAME=DATABASE_URL
-DATABASE_URL=postgres://postgres:oiPorg3Nrz0yqDLE@postgres:5432/polis-dev
 DEV_MODE=true
 DISABLE_INTERCOM=true
-DOMAIN_OVERRIDE=localhost:5000
+DOMAIN_OVERRIDE=172.17.0.1:5000
 PORT=5000
 POSTGRES_DB=polis-dev
 POSTGRES_PASSWORD=oiPorg3Nrz0yqDLE
 POSTGRES_USER=postgres
 STATIC_FILES_ADMINDASH_PORT=5002
-STATIC_FILES_HOST=localhost
+STATIC_FILES_HOST=172.17.0.1
 STATIC_FILES_PORT=5001
 STRIPE_SECRET_KEY=sk_test_NFBDEThkpHCYBzXPJuBlY8TW
